--- a/Module01/ex00/Makefile
+++ b/Module01/ex00/Makefile
@@ -6,12 +6,12 @@
 #    By: ladawi <ladawi@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/27 17:09:30 by ladawi            #+#    #+#              #
-#    Updated: 2022/03/29 18:37:25 by ladawi           ###   ########.fr        #
+#    Updated: 2022/03/30 15:36:04 by ladawi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = BraiiiiiiinnnzzzZ
-FLAGS = -Wall -Wextra -Werror -std=c++98
+FLAGS = -Wall -Wextra -Werror -std=c++98 -g3 -fsanitize=address
 CC = clang++
 
 FILES = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
