--- a/Module08/ex01/Makefile
+++ b/Module08/ex01/Makefile
@@ -6,19 +6,19 @@
 #    By: ladawi <ladawi@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/27 17:09:30 by ladawi            #+#    #+#              #
-#    Updated: 2022/04/21 18:10:23 by ladawi           ###   ########.fr        #
+#    Updated: 2022/04/23 21:42:22 by ladawi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Serialization
+NAME = Array
 FLAGS = -Wall -Wextra -Werror -std=c++98 -g3
 CC = clang++
 
-FILES = main.cpp Data.cpp
+FILES = main.cpp
 
 OBJS = $(FILES:%.cpp=%.o)
 
-INCLUDES = Data.hpp
+INCLUDES = easyfind.hpp
 
 END = \033[0m
 RED = \033[0;91m
