--- a/Module06/ex02/Makefile
+++ b/Module06/ex02/Makefile
@@ -6,12 +6,12 @@
 #    By: ladawi <ladawi@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/27 17:09:30 by ladawi            #+#    #+#              #
-#    Updated: 2022/05/03 13:43:31 by ladawi           ###   ########.fr        #
+#    Updated: 2022/05/03 14:16:47 by ladawi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = identify_type
-FLAGS = -Wall -Wextra -Werror -std=c++98 -g3
+FLAGS = -Wall -Wextra -Werror -std=c++98 
 CC = c++
 
 FILES = main.cpp Class.cpp
