--- a/Module01/ex04/Makefile
+++ b/Module01/ex04/Makefile
@@ -6,7 +6,7 @@
 #    By: ladawi <ladawi@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/27 17:09:30 by ladawi            #+#    #+#              #
-#    Updated: 2022/05/03 13:45:42 by ladawi           ###   ########.fr        #
+#    Updated: 2022/05/05 11:23:58 by ladawi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ FILES = main.cpp
 
 OBJS = $(FILES:%.cpp=%.o)
 
-INCLUDES = Sed_is_for_losers.hpp
+INCLUDES =
 
 END = \033[0m
 RED = \033[0;91m
